sandbox project, so use mojo-sandbox-parent add xsd
git-svn-id: file:///home/tiste/MOJOHAUS-TO-GIT/SVN-MOJO-WIP/trunk/sandbox/consumer-maven-plugin@19474 52ab4f32-60fc-0310-b215-8acea882cd1b

--- a/pom.xml
+++ b/pom.xml
@@ -18,14 +18,16 @@
  * under the License. 
  *
  -->
-<project>
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
   <modelVersion>4.0.0</modelVersion>
 
   <parent>
     <groupId>org.codehaus.mojo</groupId>
-    <artifactId>mojo-parent</artifactId>
-    <version>32</version>
+    <artifactId>mojo-sandbox-parent</artifactId>
+    <version>14</version>
   </parent>
   <artifactId>consumer-maven-plugin</artifactId>
   <packaging>maven-plugin</packaging>
