--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
  * "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
  * KIND, either express or implied.  See the License for the
  * specific language governing permissions and limitations
- * under the License. 
+ * under the License.
  *
  -->
 <project xmlns="http://maven.apache.org/POM/4.0.0"
@@ -35,7 +35,7 @@
   <version>0.9.0-SNAPSHOT</version>
   <description>Plugin to generate consumer POM (reduced to information required for consumers of maven repositories) and to use (install, sign, deploy) it instead of original pom.xml.</description>
   <properties>
-    <mavenVersion>2.2.1</mavenVersion>
+    <mavenVersion>3.1.1</mavenVersion>
   </properties>
   <developers>
     <developer>
@@ -53,12 +53,18 @@
     <dependency>
       <groupId>org.apache.maven</groupId>
       <artifactId>maven-plugin-api</artifactId>
-      <version>${mavenVersion}</version>
+      <!-- <version>${mavenVersion}</version> -->
     </dependency>
     <dependency>
       <groupId>org.apache.maven</groupId>
       <artifactId>maven-project</artifactId>
-      <version>${mavenVersion}</version>
+      <!-- <version>2.2.1</version> -->
+      <version>3.0-alpha-2</version>
+    </dependency>
+    <dependency>
+      <groupId>org.codehaus.plexus</groupId>
+      <artifactId>plexus-interpolation</artifactId>
+      <version>1.9</version>
     </dependency>
     <dependency>
       <groupId>org.apache.maven.plugin-tools</groupId>
@@ -114,7 +120,7 @@
       </plugin>
     </plugins>
   </build>
-  
+
   <profiles>
     <profile>
       <id>run-its</id>
