--- a/src/it/projects/os-profile-inactive/pom.xml
+++ b/src/it/projects/os-profile-inactive/pom.xml
@@ -1,34 +1,24 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.codehaus.mojo.consumer.its</groupId>
-  <artifactId>resolve-properties</artifactId>
+  <artifactId>jdk-profile-active</artifactId>
   <version>0.0.1-SNAPSHOT</version>
-  
-  <properties>
-    <depVersion>1.1</depVersion>
-    <utilVersion>3.2.1</utilVersion>
-  </properties>
-  
-  <dependencies>
-    <dependency>
-      <groupId>org.codehaus.mojo.consumer.its</groupId>
-      <artifactId>dep</artifactId>
-      <version>${depVersion}</version>
-    </dependency>
-  </dependencies>
   
   <profiles>
     <profile>
+      <id>os</id>
       <activation>
-        <jdk>1.3</jdk>
+        <os>
+          <family>customOS</family>
+        </os>
       </activation>
       <dependencies>
         <dependency>
           <groupId>org.codehaus.mojo.consumer.its</groupId>
-          <artifactId>util</artifactId>
-          <version>${utilVersion}</version>
+          <artifactId>dep</artifactId>
+          <version>1.1</version>
         </dependency>
       </dependencies>
     </profile>
-  </profiles>
+  </profiles>  
 </project>
