New approach: use the Maven3 ModelBuilder
git-svn-id: file:///home/tiste/MOJOHAUS-TO-GIT/SVN-MOJO-WIP/trunk/sandbox/consumer-maven-plugin@19486 52ab4f32-60fc-0310-b215-8acea882cd1b

--- a/src/it/projects/inherit-parent-dependencyManagement/pom.xml
+++ b/src/it/projects/inherit-parent-dependencyManagement/pom.xml
@@ -12,7 +12,7 @@
 
   <dependencies>
     <dependency>
-      <groupId>org.codehaus.mojo.consumer</groupId>
+      <groupId>org.codehaus.mojo.consumer.its</groupId>
       <artifactId>dep</artifactId>
     </dependency>
   </dependencies>
