--- a/pom.xml
+++ b/pom.xml
@@ -1,26 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!--
- * Licensed to the Apache Software Foundation (ASF) under one
- * or more contributor license agreements.  See the NOTICE file
- * distributed with this work for additional information
- * regarding copyright ownership.  The ASF licenses this file
- * to you under the Apache License, Version 2.0 (the
- * "License"); you may not use this file except in compliance
- * with the License.  You may obtain a copy of the License at
- *
- * http://www.apache.org/licenses/LICENSE-2.0
- *
- * Unless required by applicable law or agreed to in writing,
- * software distributed under the License is distributed on an
- * "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
- * KIND, either express or implied.  See the License for the
- * specific language governing permissions and limitations
- * under the License.
- *
- -->
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<!-- * Licensed to the Apache Software Foundation (ASF) under one * or more 
+  contributor license agreements. See the NOTICE file * distributed with this 
+  work for additional information * regarding copyright ownership. The ASF 
+  licenses this file * to you under the Apache License, Version 2.0 (the * 
+  "License"); you may not use this file except in compliance * with the License. 
+  You may obtain a copy of the License at * * http://www.apache.org/licenses/LICENSE-2.0 
+  * * Unless required by applicable law or agreed to in writing, * software 
+  distributed under the License is distributed on an * "AS IS" BASIS, WITHOUT 
+  WARRANTIES OR CONDITIONS OF ANY * KIND, either express or implied. See the 
+  License for the * specific language governing permissions and limitations 
+  * under the License. * -->
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
   <modelVersion>4.0.0</modelVersion>
 
@@ -35,13 +26,19 @@
   <version>0.9.0-SNAPSHOT</version>
   <description>Plugin to generate consumer POM (reduced to information required for consumers of maven repositories) and to use (install, sign, deploy) it instead of original pom.xml.</description>
   <properties>
-    <mavenVersion>3.1.1</mavenVersion>
+    <mavenVersion>3.0</mavenVersion>
   </properties>
   <developers>
     <developer>
       <id>hohwille</id>
       <name>J&#246;rg Hohwiller</name>
       <email>hohwille@users.sourceforge.net</email>
+    </developer>
+    <developer>
+      <id>rfscholte</id>
+      <name>Robert Scholte</name>
+      <email>rfscholte@codehaus.org</email>
+      <timezone>Europe/Amsterdam</timezone>
     </developer>
   </developers>
   <dependencies>
@@ -52,24 +49,13 @@
     </dependency>
     <dependency>
       <groupId>org.apache.maven</groupId>
-      <artifactId>maven-plugin-api</artifactId>
-      <!-- <version>${mavenVersion}</version> -->
-    </dependency>
-    <dependency>
-      <groupId>org.apache.maven</groupId>
-      <artifactId>maven-project</artifactId>
-      <!-- <version>2.2.1</version> -->
-      <version>3.0-alpha-2</version>
-    </dependency>
-    <dependency>
-      <groupId>org.apache.maven</groupId>
-      <artifactId>maven-settings</artifactId>
+      <artifactId>maven-core</artifactId>
       <version>${mavenVersion}</version>
     </dependency>
     <dependency>
-      <groupId>org.codehaus.plexus</groupId>
-      <artifactId>plexus-interpolation</artifactId>
-      <version>1.9</version>
+      <groupId>org.apache.maven</groupId>
+      <artifactId>maven-plugin-api</artifactId>
+      <!-- <version>${mavenVersion}</version> -->
     </dependency>
     <dependency>
       <groupId>org.apache.maven.plugin-tools</groupId>
@@ -115,13 +101,13 @@
         </configuration>
       </plugin>
       <plugin>
-         <groupId>org.apache.maven.plugins</groupId>
-         <artifactId>maven-compiler-plugin</artifactId>
-         <version>2.5.1</version>
-         <configuration>
-           <source>1.5</source>
-           <target>1.5</target>
-         </configuration>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>2.5.1</version>
+        <configuration>
+          <source>1.5</source>
+          <target>1.5</target>
+        </configuration>
       </plugin>
     </plugins>
   </build>
