--- a/pom.xml
+++ b/pom.xml
@@ -29,7 +29,7 @@ under the License.
   <artifactId>consumer-maven-plugin</artifactId>
   <packaging>maven-plugin</packaging>
   <name>Maven Consumer Plugin</name>
-  <version>0.9.0-SNAPSHOT</version>
+  <version>1.0.0-beta-1-SNAPSHOT</version>
   <description>Plugin to generate consumer POM (reduced to information required for consumers of maven repositories) and to use (install, sign, deploy) it instead of original pom.xml.</description>
   <properties>
     <mavenVersion>3.0</mavenVersion>
