--- a/pom.xml
+++ b/pom.xml
@@ -55,6 +55,16 @@ under the License.
     </dependency>
     <dependency>
       <groupId>org.apache.maven</groupId>
+      <artifactId>maven-model-builder</artifactId>
+      <version>${mavenVersion}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.maven</groupId>
+      <artifactId>maven-artifact</artifactId>
+      <version>${mavenVersion}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.maven</groupId>
       <artifactId>maven-core</artifactId>
       <version>${mavenVersion}</version>
     </dependency>
@@ -63,6 +73,12 @@ under the License.
       <artifactId>maven-plugin-api</artifactId>
       <!-- <version>${mavenVersion}</version> -->
     </dependency>
+    <dependency>
+      <groupId>org.codehaus.plexus</groupId>
+      <artifactId>plexus-utils</artifactId>
+      <version>3.0.17</version>
+    </dependency>
+    
     <dependency>
       <groupId>org.apache.maven.plugin-tools</groupId>
       <artifactId>maven-plugin-annotations</artifactId>
@@ -186,4 +202,8 @@ under the License.
       </build>
     </profile>
   </profiles>
+  <dependencyManagement>
+    <dependencies>
+    </dependencies>
+  </dependencyManagement>
 </project>
