--- a/src/it/projects/property-profile-active/pom.xml
+++ b/src/it/projects/property-profile-active/pom.xml
@@ -4,12 +4,26 @@
   <artifactId>property-profile-active</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>@project.groupId@</groupId>
+        <artifactId>@project.artifactId@</artifactId>
+        <version>@project.version@</version>
+        <configuration>
+          <embedBuildProfileDependencies>true</embedBuildProfileDependencies>
+        </configuration>
+      </plugin>
+    </plugins>
+  </build>
+  
+  
   <profiles>
     <profile>
       <id>property</id>
       <activation>
         <property>
-          <name>undefined.magic.property</name>
+          <name>line.separator</name>
         </property>
       </activation>
       <dependencies>
