--- a/src/it/projects/resolve-gav-properties/pom.xml
+++ b/src/it/projects/resolve-gav-properties/pom.xml
@@ -1,14 +1,14 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>org.codehaus.mojo.consumer.its</groupId>
+  <groupId>org.codehaus.mojo.flatten.its</groupId>
   <artifactId>resolve-properties</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   
   <properties>
-    <depGroupId>org.codehaus.mojo.consumer.its</depGroupId>
+    <depGroupId>org.codehaus.mojo.flatten.its</depGroupId>
     <depArtifactId>dep</depArtifactId>
     <depVersion>1.1</depVersion>
-    <utilGroupId>org.codehaus.mojo.consumer.its</utilGroupId>
+    <utilGroupId>org.codehaus.mojo.flatten.its</utilGroupId>
     <utilArtifactId>util</utilArtifactId>
     <utilVersion>3.2.1</utilVersion>
   </properties>
