--- a/pom.xml
+++ b/pom.xml
@@ -26,11 +26,11 @@ under the License.
     <artifactId>mojo-sandbox-parent</artifactId>
     <version>14</version>
   </parent>
-  <artifactId>consumer-maven-plugin</artifactId>
+  <artifactId>flatten-maven-plugin</artifactId>
   <packaging>maven-plugin</packaging>
-  <name>Maven Consumer Plugin</name>
+  <name>Maven Flatten Plugin</name>
   <version>1.0.0-beta-1-SNAPSHOT</version>
-  <description>Plugin to generate consumer POM (reduced to information required for consumers of maven repositories) and to use (install, sign, deploy) it instead of original pom.xml.</description>
+  <description>Plugin to generate flattened POM (reduced to information required for consumers of maven repositories) and to use (install, sign, deploy) it instead of original pom.xml.</description>
   <properties>
     <mavenVersion>3.0</mavenVersion>
   </properties>
@@ -119,7 +119,7 @@ under the License.
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-plugin-plugin</artifactId>
         <configuration>
-          <goalPrefix>consumer</goalPrefix>
+          <goalPrefix>flatten</goalPrefix>
         </configuration>
       </plugin>
       <plugin>
@@ -170,7 +170,7 @@ under the License.
               </properties>
               <goals>
                 <goal>clean</goal>
-                <goal>${project.groupId}:${project.artifactId}:${project.version}:consumer</goal>
+                <goal>${project.groupId}:${project.artifactId}:${project.version}:flatten</goal>
               </goals>
               <projectsDirectory>src/it/projects</projectsDirectory>
               <postBuildHookScript>verify</postBuildHookScript>
