--- a/src/it/projects/inherit-parent-dependency/pom.xml
+++ b/src/it/projects/inherit-parent-dependency/pom.xml
@@ -2,7 +2,7 @@
   <modelVersion>4.0.0</modelVersion>
   
   <parent>
-    <groupId>org.codehaus.mojo.consumer.its</groupId>
+    <groupId>org.codehaus.mojo.flatten.its</groupId>
     <artifactId>parent-deps</artifactId>
     <version>1</version>
   </parent>
