--- a/src/it/projects/inherit-parent-dependencyManagement/pom.xml
+++ b/src/it/projects/inherit-parent-dependencyManagement/pom.xml
@@ -3,7 +3,7 @@
   <modelVersion>4.0.0</modelVersion>
 
   <parent>
-    <groupId>org.codehaus.mojo.consumer.its</groupId>
+    <groupId>org.codehaus.mojo.flatten.its</groupId>
     <artifactId>parent-depMngt</artifactId>
     <version>2</version>
   </parent>
@@ -12,7 +12,7 @@
 
   <dependencies>
     <dependency>
-      <groupId>org.codehaus.mojo.consumer.its</groupId>
+      <groupId>org.codehaus.mojo.flatten.its</groupId>
       <artifactId>dep</artifactId>
     </dependency>
   </dependencies>
