--- a/src/it/projects/property-profile-active/pom.xml
+++ b/src/it/projects/property-profile-active/pom.xml
@@ -1,6 +1,6 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>org.codehaus.mojo.consumer.its</groupId>
+  <groupId>org.codehaus.mojo.flatten.its</groupId>
   <artifactId>property-profile-active</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   
@@ -28,7 +28,7 @@
       </activation>
       <dependencies>
         <dependency>
-          <groupId>org.codehaus.mojo.consumer.its</groupId>
+          <groupId>org.codehaus.mojo.flatten.its</groupId>
           <artifactId>dep</artifactId>
           <version>1.1</version>
         </dependency>
