added documentation, fixed code-style that was lost in eclipse, etc.
git-svn-id: file:///home/tiste/MOJOHAUS-TO-GIT/SVN-MOJO-WIP/trunk/sandbox/flatten-maven-plugin@19546 52ab4f32-60fc-0310-b215-8acea882cd1b

--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,10 @@ under the License.
   <name>Maven Flatten Plugin</name>
   <version>1.0.0-beta-1-SNAPSHOT</version>
   <description>Plugin to generate flattened POM (reduced to information required for consumers of maven repositories) and to use (install, sign, deploy) it instead of original pom.xml.</description>
+  <inceptionYear>2014</inceptionYear>
+  <prerequisites>
+    <maven>3.0</maven>
+  </prerequisites>
   <properties>
     <mavenVersion>3.0</mavenVersion>
   </properties>
@@ -202,8 +206,11 @@ under the License.
       </build>
     </profile>
   </profiles>
-  <dependencyManagement>
-    <dependencies>
-    </dependencies>
-  </dependencyManagement>
+  <licenses>
+    <license>
+      <name>Apache Software Licenese</name>
+      <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+      <comments/>
+    </license>
+  </licenses>
 </project>
