add sandbox-profile to site use general usage text
git-svn-id: file:///home/tiste/MOJOHAUS-TO-GIT/SVN-MOJO-WIP/trunk/sandbox/flatten-maven-plugin@19547 52ab4f32-60fc-0310-b215-8acea882cd1b

--- a/pom.xml
+++ b/pom.xml
@@ -33,7 +33,7 @@ under the License.
   <description>Plugin to generate flattened POM (reduced to information required for consumers of maven repositories) and to use (install, sign, deploy) it instead of original pom.xml.</description>
   <inceptionYear>2014</inceptionYear>
   <prerequisites>
-    <maven>3.0</maven>
+    <maven>${mavenVersion}</maven>
   </prerequisites>
   <properties>
     <mavenVersion>3.0</mavenVersion>
