MOJO-2027: simplified approach flattenDescriptor
git-svn-id: file:///home/tiste/MOJOHAUS-TO-GIT/SVN-MOJO-WIP/trunk/mojo/flatten-maven-plugin@19749 52ab4f32-60fc-0310-b215-8acea882cd1b

--- a/src/it/projects/optional-elements-keepIfExists/pom.xml
+++ b/src/it/projects/optional-elements-keepIfExists/pom.xml
@@ -15,21 +15,21 @@
         <artifactId>flatten-maven-plugin</artifactId>
         <configuration>
           <flattenDescriptor>
-            <name>KeepIfExists</name>
-            <description>KeepIfExists</description>
-            <url>KeepIfExists</url>
-            <ciManagement>KeepIfExists</ciManagement>
-            <developers>KeepIfExists</developers>
-            <contributors>KeepIfExists</contributors>
-            <distributionManagement>KeepIfExists</distributionManagement>
-            <inceptionYear>KeepIfExists</inceptionYear>
-            <issueManagement>KeepIfExists</issueManagement>
-            <mailingLists>KeepIfExists</mailingLists>
-            <organization>KeepIfExists</organization>
-            <pluginRepositories>KeepIfExists</pluginRepositories>
-            <repositories>KeepIfExists</repositories>
-            <prerequisites>KeepIfExists</prerequisites>
-            <scm>KeepIfExists</scm>
+            <name/>
+            <description/>
+            <url/>
+            <ciManagement/>
+            <developers/>
+            <contributors/>
+            <distributionManagement/>
+            <inceptionYear/>
+            <issueManagement/>
+            <mailingLists/>
+            <organization/>
+            <pluginRepositories/>
+            <repositories/>
+            <prerequisites/>
+            <scm/>
           </flattenDescriptor>
         </configuration>
       </plugin>
