latest improvements (minimum instead of all for flattenMode, keep repositories by default, updated ITs and JavaDoc)
git-svn-id: file:///home/tiste/MOJOHAUS-TO-GIT/SVN-MOJO-WIP/trunk/mojo/flatten-maven-plugin@19757 52ab4f32-60fc-0310-b215-8acea882cd1b

--- a/src/it/projects/optional-elements-modeMinimum/pom.xml
+++ b/src/it/projects/optional-elements-modeMinimum/pom.xml
@@ -3,7 +3,7 @@
   <!-- required -->
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.codehaus.mojo.flatten.its</groupId>
-  <artifactId>optional-elements-modeAll</artifactId>
+  <artifactId>optional-elements-modeMinimum</artifactId>
   <version>0.0.1-SNAPSHOT</version>
 
   <!-- banned -->
@@ -14,7 +14,7 @@
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>flatten-maven-plugin</artifactId>
         <configuration>
-          <flattenMode>all</flattenMode>
+          <flattenMode>minimum</flattenMode>
         </configuration>
       </plugin>
     </plugins>
