MOJO-2041: further cleanup, additional flexibility, generic handling via PomProperty, improved ITs
git-svn-id: file:///home/tiste/MOJOHAUS-TO-GIT/SVN-MOJO-WIP/trunk/mojo/flatten-maven-plugin@20506 52ab4f32-60fc-0310-b215-8acea882cd1b

--- a/src/it/projects/bom-pomElements/pom.xml
+++ b/src/it/projects/bom-pomElements/pom.xml
@@ -23,7 +23,7 @@
         <configuration>
           <updatePomFile>true</updatePomFile>
           <pomElements>
-            <dependencyManagement>effective</dependencyManagement>
+            <dependencyManagement>expand</dependencyManagement>
           </pomElements>
         </configuration>
       </plugin>
