--- a/pom.xml
+++ b/pom.xml
@@ -162,6 +162,7 @@ under the License.
           <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-invoker-plugin</artifactId>
+            <version>2.0.0</version>
             <executions>
               <execution>
                 <goals>
