--- a/src/it/projects/os-profile-active-in-parent/parent/pom.xml
+++ b/src/it/projects/os-profile-active-in-parent/parent/pom.xml
@@ -1,26 +1,17 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.codehaus.mojo.flatten.its</groupId>
-  <artifactId>profile-with-dependencies-active-disabled</artifactId>
+  <artifactId>os-profile-active-in-parent_parent</artifactId>
   <version>0.0.1-SNAPSHOT</version>
-
-  <build>
-    <plugins>
-      <plugin>
-        <groupId>@project.groupId@</groupId>
-        <artifactId>@project.artifactId@</artifactId>
-        <configuration>
-          <embedBuildProfileDependencies>true</embedBuildProfileDependencies>
-        </configuration>
-      </plugin>
-    </plugins>
-  </build>
+  <packaging>pom</packaging>
 
   <profiles>
     <profile>
-      <id>myprofile</id>
+      <id>os</id>
       <activation>
-        <activeByDefault>true</activeByDefault>
+        <os>
+          <family>!customOS</family>
+        </os>
       </activation>
       <dependencies>
         <dependency>
