--- a/src/it/projects/profile-with-dependencies-triggered-by-folder-presence/parent/pom.xml
+++ b/src/it/projects/profile-with-dependencies-triggered-by-folder-presence/parent/pom.xml
@@ -1,8 +1,9 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.codehaus.mojo.flatten.its</groupId>
-  <artifactId>profile-with-dependencies-active-disabled</artifactId>
+  <artifactId>profile-with-dependencies-triggered-by-folder-presence-parent</artifactId>
   <version>0.0.1-SNAPSHOT</version>
+  <packaging>pom</packaging>
 
   <build>
     <plugins>
@@ -20,7 +21,9 @@
     <profile>
       <id>myprofile</id>
       <activation>
-        <activeByDefault>true</activeByDefault>
+        <file>
+          <exists>/tmp/</exists>
+        </file>
       </activation>
       <dependencies>
         <dependency>
