--- a/src/it/projects/profile-with-dependencies-triggered/pom.xml
+++ b/src/it/projects/profile-with-dependencies-triggered/pom.xml
@@ -7,15 +7,15 @@
   <build>
     <plugins>
       <plugin>
-        <groupId>org.codehaus.mojo</groupId>
-        <artifactId>flatten-maven-plugin</artifactId>
+        <groupId>@project.groupId@</groupId>
+        <artifactId>@project.artifactId@</artifactId>
         <configuration>
           <embedBuildProfileDependencies>true</embedBuildProfileDependencies>
         </configuration>
       </plugin>
     </plugins>
   </build>
-  
+
   <profiles>
     <profile>
       <id>myprofile</id>
@@ -27,5 +27,5 @@
         </dependency>
       </dependencies>
     </profile>
-  </profiles>  
+  </profiles>
 </project>
