--- a/src/it/projects/inherit-parent-profile/pom.xml
+++ b/src/it/projects/inherit-parent-profile/pom.xml
@@ -9,4 +9,36 @@
   <artifactId>inherit-parent-profile</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   
+  <profiles>
+    <profile>
+      <id>myprofile</id>
+      <activation>
+        <jdk>1.4</jdk>
+      </activation>
+      <dependencies>
+        <dependency>
+          <groupId>org.codehaus.mojo.flatten.its</groupId>
+          <artifactId>util</artifactId>
+          <version>3.2.1</version>
+        </dependency>
+      </dependencies>
+    </profile>
+  </profiles>
+  
+  <!--
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>flatten-maven-plugin</artifactId>
+        <configuration>
+          <pomElements>
+            <profiles>expand</profiles>
+          </pomElements>
+        </configuration>
+      </plugin>
+    </plugins>
+  </build>
+  -->
+  
 </project>
