--- a/pom.xml
+++ b/pom.xml
@@ -37,7 +37,7 @@
     <maven>${mavenVersion}</maven>
   </prerequisites>
   <properties>
-    <mavenVersion>3.1.1</mavenVersion>
+    <mavenVersion>[3.5.0-alpha-1,3.5.0]</mavenVersion>
     <maven.compiler.source>1.5</maven.compiler.source>
     <maven.compiler.target>1.5</maven.compiler.target>
   </properties>
