Fixed #43  o Cleaned up pom file and use the versions from parent    instead of overwriting them.  o removed a WARNING related to deprecated usage of @Component    instead of @Parameter usage.

--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,8 @@ under the License.
   </prerequisites>
   <properties>
     <mavenVersion>3.1.1</mavenVersion>
+    <maven.compiler.source>1.5</maven.compiler.source>
+    <maven.compiler.target>1.5</maven.compiler.target>
   </properties>
   <developers>
     <developer>
@@ -96,7 +98,6 @@ under the License.
     <dependency>
       <groupId>org.apache.maven.plugin-tools</groupId>
       <artifactId>maven-plugin-annotations</artifactId>
-      <version>3.2</version>
       <scope>provided</scope>
     </dependency>
   </dependencies>
@@ -106,7 +107,6 @@ under the License.
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-plugin-plugin</artifactId>
-          <version>3.2</version>
           <configuration>
             <skipErrorNoDescriptorsFound>true</skipErrorNoDescriptorsFound>
           </configuration>
@@ -136,15 +136,6 @@ under the License.
           <goalPrefix>flatten</goalPrefix>
         </configuration>
       </plugin>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-compiler-plugin</artifactId>
-        <version>2.5.1</version>
-        <configuration>
-          <source>1.5</source>
-          <target>1.5</target>
-        </configuration>
-      </plugin>
     </plugins>
   </build>
 
@@ -162,7 +153,6 @@ under the License.
           <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-invoker-plugin</artifactId>
-            <version>2.0.0</version>
             <executions>
               <execution>
                 <goals>
