--- a/pom.xml
+++ b/pom.xml
@@ -161,7 +161,7 @@
           <plugin>
             <groupId>org.codehaus.mojo</groupId>
             <artifactId>mrm-maven-plugin</artifactId>
-            <version>1.0-beta-1</version>
+            <version>1.0.0</version>
             <executions>
               <execution>
                 <goals>
