--- a/src/it/projects/profile-with-properties-inactive/pom.xml
+++ b/src/it/projects/profile-with-properties-inactive/pom.xml
@@ -2,17 +2,23 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.codehaus.mojo.flatten.its</groupId>
   <artifactId>profile-with-properties-active</artifactId>
-  <version>0.0.1${versionAddon}-SNAPSHOT</version>
+  <version>0.0.1-SNAPSHOT</version>
+
+  <licenses>
+    <license>
+      <name>${testProperty}</name>
+    </license>
+  </licenses>
 
   <properties>
-    <versionAddon>DEFAULT-VALUE</versionAddon>
+    <testProperty>DEFAULT-VALUE</testProperty>
   </properties>
 
   <profiles>
     <profile>
       <id>myprofile</id>
       <properties>
-        <versionAddon>PROFILE-VALUE</versionAddon>
+        <testProperty>PROFILE-VALUE</testProperty>
       </properties>
     </profile>
   </profiles>  
