updated team, added contributors

--- a/pom.xml
+++ b/pom.xml
@@ -46,12 +46,75 @@
       <id>hohwille</id>
       <name>Jörg Hohwiller</name>
       <email>hohwille@users.sourceforge.net</email>
+      <roles>
+        <role>maintainer</role>
+        <role>developer</role>
+      </roles>
     </developer>
     <developer>
       <id>rfscholte</id>
       <name>Robert Scholte</name>
-      <email>rfscholte@codehaus.org</email>
+      <email>rfscholte@apache.org</email>
       <timezone>Europe/Amsterdam</timezone>
+      <roles>
+        <role>developer</role>
+      </roles>
+    </developer>
+    <developer>
+      <id>khmarbaise</id>
+      <name>Karl Heinz Marbaise</name>
+      <roles>
+        <role>developer</role>
+      </roles>
+    </developer>
+    <developer>
+      <id>cboehme</id>
+      <name>Christoph Böhme</name>
+      <roles>
+        <role>contributor</role>
+      </roles>
+    </developer>
+    <developer>
+      <id>mguillet</id>
+      <name>Michel Guillet</name>
+      <roles>
+        <role>contributor</role>
+      </roles>
+    </developer>
+    <developer>
+      <id>mariuszs</id>
+      <name>Mariusz Smykuła</name>
+      <roles>
+        <role>contributor</role>
+      </roles>
+    </developer>
+    <developer>
+      <id>sleicht</id>
+      <name>Stephan Leicht Vogt</name>
+      <roles>
+        <role>contributor</role>
+      </roles>
+    </developer>
+    <developer>
+      <id>erwint</id>
+      <name>Erwin Tratar</name>
+      <roles>
+        <role>contributor</role>
+      </roles>
+    </developer>
+    <developer>
+      <id>gdelafosse</id>
+      <name>Guillaume Delafosse</name>
+      <roles>
+        <role>contributor</role>
+      </roles>
+    </developer>
+    <developer>
+      <id>flabodotes</id>
+      <name>Flabo</name>
+      <roles>
+        <role>contributor</role>
+      </roles>
     </developer>
   </developers>
   <dependencies>
