Fixed #75 - Build Issues on travis  - Added TLSv1.2 support  - using sudo:required according to the travis support.

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,18 @@
+sudo: required
+
 language: java
-dist: precise
+
 jdk:
-  - openjdk7
-  - oraclejdk7
   - oraclejdk8
 
-script: "./mvnw --show-version --errors --batch-mode -Prun-its clean verify"
+env:
+  - MAVEN_VERSION=3.5.4
+
+install:
+  - "mvn -N io.takari:maven:wrapper -Dmaven=${MAVEN_VERSION} -Dhttps.protocols=TLSv1.2"
+
+script:
+  - "./mvnw --show-version --errors --batch-mode -Prun-its clean verify -Dhttps.protocols=TLSv1.2"
 
 cache:
     directories:
@@ -16,3 +23,4 @@ branches:
 notifications:
     email:
         - joerg.hohwiller@googlemail.com
+        - mojohaus@soebes.de
