--- a/pom.xml
+++ b/pom.xml
@@ -219,7 +219,7 @@
               </properties>
               <goals>
                 <goal>clean</goal>
-                <goal>${project.groupId}:${project.artifactId}:${project.version}:flatten</goal>
+                <goal>${project.groupId}:${project.artifactId}:${project.version}:flatten -Drevision=1.2.3.4</goal>
               </goals>
               <projectsDirectory>src/it/projects</projectsDirectory>
               <postBuildHookScript>verify</postBuildHookScript>
