Fix oraclejdk8 problem on Travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,9 @@ sudo: required
 
 language: java
 
+# https://travis-ci.community/t/install-of-oracle-jdk-8-failing/3038/9
+dist: trusty
+
 jdk:
   - oraclejdk8
 
