Use "version" interpolation mode in multi-module IT

--- a/src/it/projects/complete-multimodule-parent-pom-cifriendly/pom.xml
+++ b/src/it/projects/complete-multimodule-parent-pom-cifriendly/pom.xml
@@ -15,9 +15,7 @@
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>flatten-maven-plugin</artifactId>
 				<configuration>
-					<flattenMode>resolveCiFriendliesOnly</flattenMode>
-                    <!-- Use this instead to fix interpolation bug
-                    <flattenMode>version</flattenMode>-->
+					<flattenMode>version</flattenMode>
 				</configuration>
 			</plugin>
 		</plugins>
