--- a/src/it/projects/complete-multimodule-parent-pom-cifriendly/module/pom.xml
+++ b/src/it/projects/complete-multimodule-parent-pom-cifriendly/module/pom.xml
@@ -4,4 +4,22 @@
 	<groupId>org.codehaus.mojo.flatten.its</groupId>
 	<artifactId>multimodule-module-cifriendly</artifactId>
 	<version>${revision}</version>
+
+	<dependencies>
+		<dependency>
+			<groupId>org.codehaus.mojo.flatten.its</groupId>
+			<artifactId>dep</artifactId>
+			<version>${revision}</version>
+		</dependency>
+	</dependencies>
+
+	<dependencyManagement>
+		<dependencies>
+			<dependency>
+				<groupId>org.codehaus.mojo.flatten.its</groupId>
+				<artifactId>dep</artifactId>
+				<version>${revision}</version>
+			</dependency>
+		</dependencies>
+	</dependencyManagement>
 </project>
