--- a/src/it/projects/complete-multimodule-parent-pom-cifriendly/module-with-parent/pom.xml
+++ b/src/it/projects/complete-multimodule-parent-pom-cifriendly/module-with-parent/pom.xml
@@ -20,4 +20,14 @@
     </dependency>
   </dependencies>
 
+  <dependencyManagement>
+    <dependencies>
+      <dependency>
+        <groupId>org.codehaus.mojo.flatten.its</groupId>
+        <artifactId>dep</artifactId>
+        <version>${revision}</version>
+      </dependency>
+    </dependencies>
+  </dependencyManagement>
+
 </project>
