fix #136 use https in pom file as it is now done in maven 3.6.3 and so update travis etc... bump parent pom so we can now use 1.7
Signed-off-by: olivier lamy <olamy@apache.org>

--- a/pom.xml
+++ b/pom.xml
@@ -235,6 +235,7 @@
               </goals>
               <projectsDirectory>src/it/projects</projectsDirectory>
               <postBuildHookScript>verify</postBuildHookScript>
+              <preBuildHookScript>setup</preBuildHookScript>
             </configuration>
           </plugin>
           <plugin>
