fix #136 use https in pom file as it is now done in maven 3.6.3 and so update travis etc bump parent pom so we can now use 1.7 (#137)
* fix #136 use https in pom file as it is now done in maven 3.6.3 and so update travis etc... bump parent pom so we can now use 1.7

Signed-off-by: olivier lamy <olamy@apache.org>

* switch to openjdk 8 and 11

Signed-off-by: olivier lamy <olamy@apache.org>

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,10 +6,11 @@ language: java
 dist: trusty
 
 jdk:
-  - oraclejdk8
+  - openjdk8
+  - openjdk11
 
 env:
-  - MAVEN_VERSION=3.5.4
+  - MAVEN_VERSION=3.6.3
 
 install:
   - "mvn -N io.takari:maven:wrapper -Dmaven=${MAVEN_VERSION} -Dhttps.protocols=TLSv1.2"
