Issue #91 : Projet properties should be a merge of all active profiles : activated explicitly with -P, with property activation or by default

--- a/src/it/projects/profile-with-dependencies-active/pom.xml
+++ b/src/it/projects/profile-with-dependencies-active/pom.xml
@@ -16,6 +16,14 @@
     </plugins>
   </build>
 
+  <dependencies>
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <version>${junit.version}</version>
+    </dependency>     
+  </dependencies>
+  
   <profiles>
     <profile>
       <id>myprofile</id>
@@ -29,6 +37,9 @@
           <version>1.1</version>
         </dependency>
       </dependencies>
+      <properties>
+        <junit.version>4.10</junit.version>
+      </properties>
     </profile>
   </profiles>
 </project>
