--- a/src/it/projects/optional-elements-modeOssrh/pom.xml
+++ b/src/it/projects/optional-elements-modeOssrh/pom.xml
@@ -113,5 +113,15 @@
   </scm> 
   
   <url>http://mojo.codehaus.org</url>
-
+  <profiles>
+    <profile>
+      <id>test</id>
+      <dependencies>
+        <dependency>
+          <groupId>org.codehaus.mojo.flatten.its</groupId>
+          <artifactId>dep</artifactId>
+        </dependency>
+      </dependencies>
+    </profile>
+  </profiles>
 </project>
