--- a/src/it/projects/optional-elements-pomElements-legacy/pom.xml
+++ b/src/it/projects/optional-elements-pomElements-legacy/pom.xml
@@ -129,4 +129,16 @@
   
   <url>http://mojo.codehaus.org</url>
 
+  <profiles>
+    <profile>
+      <id>test</id>
+      <dependencies>
+        <dependency>
+          <groupId>org.codehaus.mojo.flatten.its</groupId>
+          <artifactId>dep</artifactId>
+        </dependency>
+      </dependencies>
+    </profile>
+  </profiles>
+
 </project>
